--- a/pages/popup.html
+++ b/pages/popup.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 	<title>Round</title>
-    <link href="css/popup.css" rel="stylesheet">
     <script src="../lib/jquery-min.js"></script>
 	<script src="js/popup.js"></script>
 </head>
-<body>
-
-<button id="button">click me</button>
-
-</body>
+	<body>
+		<button id="article">Article</button>
+		<br><br>
+		<button id="profile">User profile</button>
+	</body>
 </html>
