--- a/pages/profile.html
+++ b/pages/profile.html
@@ -42,9 +42,9 @@
 
 		<footer>
 			<h1 class="bold">COMPARED TO YOU</h1>
-			<div id="factoid1" class="factoid"> </div>
-			<div id="factoid2" class="factoid"> </div>
-			<div id="factoid3" class="factoid"> </div>
+			<div id="factoid1" class=""> </div>
+			<div id="factoid2" class=""> </div>
+			<div id="factoid3" class=""> </div>
 		</footer>
 
 	</body>
