cleaned up and commented

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -13,8 +13,8 @@
 			<img id="logo" src="img/round_logo.png">
 
 			<div id="button-wrapper">
-				<div id="toggle-overview" class="toggle-button bold">OVERVIEW</div>
-				<div id="toggle-profile" class="toggle-button bold">PROFILE</div>
+				<div id="toggle-overview" class="toggle-button bold on">OVERVIEW</div>
+				<div id="toggle-profile" class="toggle-button bold off">PROFILE</div>
 			</div>
 		</header>
 
