--- a/pages/popup.html
+++ b/pages/popup.html
@@ -19,9 +19,11 @@
 		</header>
 
 		<div id="overview" class="section active">
+		<h1>News Overview</h1>
 		</div>
 
 		<div id="profile" class="section inactive">
+		<h1>Profile</h1>
 		</div>
 
 	</body>
