rss call on popup working, working on opening page on click

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -12,6 +12,6 @@
 		<img id="logo" src="img/round_logo.png">
 		<div id="instruction">click on a slice for suggestions</div>
 		<div id="chart"></div>
-
+		<div id="rss"></div>
 	</body>
 </html>
