--- a/pages/popup.html
+++ b/pages/popup.html
@@ -10,7 +10,12 @@
 	</head>
 	<body>
 		<img id="logo" src="img/round_logo.png">
+		<img id="go-profile" src="img/profile.png">
 		<div id="chart"></div>
 		<div id="rss"></div>
+		<div id="profile">
+			<h1> Profile under construction! </h1>
+			<h2> Check back in next prototype </h2>
+		</div>
 	</body>
 </html>
