working on checking habits and feedback

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -9,12 +9,16 @@
     	<script type="text/javascript" src="js/popup.js"></script>
 	</head>
 	<body>
-		<img id="logo" src="img/round_logo.png">
+		<img id="go-help" src="img/help.png">
 		<img id="go-profile" src="img/profile.png">
 		<div id="chart"></div>
 		<div id="rss"></div>
-		<div id="profile">
+		<div class="section" id="profile">
 			<h1> Profile under construction! </h1>
+			<h2> Check back in next prototype </h2>
+		</div>
+		<div class="section" id="help">
+			<h1> Help under construction! </h1>
 			<h2> Check back in next prototype </h2>
 		</div>
 	</body>
