--- a/pages/popup.html
+++ b/pages/popup.html
@@ -21,5 +21,14 @@
 			<h1> Help under construction! </h1>
 			<h2> Check back in next prototype </h2>
 		</div>
+
+		<div id="feedback-wrapper">
+			<div id="feedback">
+				<!-- <div id="close-feedback"></div> -->
+				<div id="feedback-text"></div>
+				<div id="category-rec"></div>
+				<div id="ok">OK</div>
+			</div>
+		</div>
 	</body>
 </html>
