saving headcount per day for profile, need to parse data for graph

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -14,8 +14,10 @@
 		<div id="chart"></div>
 		<div id="rss"></div>
 		<div class="section" id="profile">
-			<h1> Profile under construction! </h1>
-			<h2> Check back in next prototype </h2>
+
+			<h2> articles read per day </h2>
+			<div id="per-day-chart"></div>
+
 		</div>
 		<div class="section" id="help">
 			<h1> Help under construction! </h1>
