profile graph functioning
need more interaction help

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -15,7 +15,21 @@
 		<div id="rss"></div>
 		<div class="section" id="profile">
 
-			<h2> articles read per day </h2>
+			<h2> READ OVER TIME </h2>
+			<ul id="filter-container">
+				<li class="filter" id="all">all</li>
+				<li class="filter" id="politics">politics</li>
+				<li class="filter" id="world">world</li>
+				<li class="filter" id="usa">usa</li>
+				<li class="filter" id="business">business</li>
+				<li class="filter" id="health">health</li>
+				<li class="filter" id="tech">tech</li>
+				<li class="filter" id="science">science</li>
+				<li class="filter" id="sports">sports</li>
+				<li class="filter" id="culture">culture</li>
+				<li class="filter" id="opinion">opinion</li>
+				<li class="filter" id="other">other</li>
+			</ul>
 			<div id="per-day-chart"></div>
 
 		</div>
