profile ready for testing

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -35,8 +35,9 @@
 
 		</div>
 		<div class="section" id="help">
-			<h1> Help under construction! </h1>
-			<h2> Check back in next prototype </h2>
+			<h1> Sorry!! </h1>
+			<h2> Help under construction! </h2>
+			<h2> Check back next time! </h2>
 		</div>
 
 		<div id="feedback-wrapper">
