showing articles read in profile

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -17,9 +17,9 @@
 			<!-- <div id="close-rss"></div> -->
 		</div>
 		<div id="which-rss-container">
-			<p>Find articles from...</p>
-			<div class="whichRSS" id="rssNYT">NYT</div>
-			<div class="whichRSS" id="rssBF">BF</div>
+			<p>FIND ARTICLES FROM...</p>
+			<div class="whichRSS" id="rssNYT">New York Times</div>
+			<div class="whichRSS" id="rssBF">Buzzfeed</div>
 		</div>
 		<div class="section" id="profile">
 
@@ -36,24 +36,29 @@
 				<li class="button filter" id="culture">culture</li>
 				<li class="button filter" id="opinion">opinion</li>
 				<li class="button filter" id="other">other</li>
-				<li class="button" id="all">all</li>
+				<li class="button active" id="all">all</li>
 			</ul>
 			<div id="per-day-chart"></div>
 
 		</div>
+
+		<div id="articles-read-container">
+			
+		</div>
+
 		<div class="section" id="help">
 			<h1> Sorry!! </h1>
 			<h2> Help under construction! </h2>
 			<h2> Check back next time! </h2>
 		</div>
 
-		<div id="feedback-wrapper">
+		<!-- <div id="feedback-wrapper">
 			<div id="feedback">
-				<!-- <div id="close-feedback"></div> -->
+				<div id="close-feedback"></div>
 				<div id="feedback-text"></div>
 				<div id="category-rec"></div>
 				<div id="ok">OK</div>
 			</div>
-		</div>
+		</div> -->
 	</body>
 </html>
