removed articlesRead to save data space

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -42,14 +42,28 @@
 
 		</div>
 
-		<div id="articles-read-container">
-			
-		</div>
-
 		<div class="section" id="help">
-			<h1> Sorry!! </h1>
-			<h2> Help under construction! </h2>
-			<h2> Check back next time! </h2>
+			<h1> HELP </h1>
+			<ul>
+				<li>
+					<p class="faq-letter q">Q:</p> 
+					<p class="faq-text">What websites does this work on?</p>
+					<p class="faq-letter a">A:</p> 
+					<p class="faq-text">Currently Round only registers articles from <a href="http://www.nytimes.com/">New York Times</a> and <a href="https://www.buzzfeed.com/">Buzzfeed</a></p>
+				</li>
+				<li>
+					<p class="faq-letter q">Q:</p> 
+					<p class="faq-text">Who can see my data?</p>
+					<p class="faq-letter a">A:</p> 
+					<p class="faq-text">No one! Your tracking data is saved locally in your personal chrome storage. No one will be looking at or accessing your information. </p>
+				</li>
+				<li>
+					<p class="faq-letter q">Q:</p> 
+					<p class="faq-text">Wow, this is awesome. Who made this and how can I contact her?</p>
+					<p class="faq-letter a">A:</p> 
+					<p class="faq-text">So nice! This is the thesis project of Jessie Contour for <a href="http://mfadt.parsons.edu/2016/projects/round/">Parsons MFA Design and Technology</a> in NYC. She is on <a href="https://www.facebook.com/jessie.contour">facebook</a>, <a href="https://www.instagram.com/contourcontrast/">instagram</a>, <a href="https://twitter.com/contourcontrast">twitter</a> (sometimes), and <a href="https://www.linkedin.com/in/jessiecontour">linkedin</a>. Come say hello!</p>
+				</li>
+			</ul>		
 		</div>
 
 		<!-- <div id="feedback-wrapper">
