bugs fixed! removed article read feature because of storage issues

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -12,15 +12,12 @@
 		<img id="go-help" src="img/help.png">
 		<img id="go-profile" src="img/profile.png">
 		<img id="back" src="img/back.png">
+		<div id="subcategory"></div>
 		<div id="chart"></div>
-		<div id="rss">
-			<!-- <div id="close-rss"></div> -->
-		</div>
-		<div id="which-rss-container">
-			<p>FIND ARTICLES FROM...</p>
-			<div class="whichRSS" id="rssNYT">New York Times</div>
-			<div class="whichRSS" id="rssBF">Buzzfeed</div>
-		</div>
+		<div id="rss"></div>
+
+		<div id="close-rss"></div>
+
 		<div class="section" id="profile">
 
 			<h2> YOUR HABITS OVER TIME </h2>
@@ -36,7 +33,7 @@
 				<li class="button filter" id="culture">culture</li>
 				<li class="button filter" id="opinion">opinion</li>
 				<li class="button filter" id="other">other</li>
-				<li class="button active" id="all">all</li>
+				<li class="button active" id="all">show all</li>
 			</ul>
 			<div id="per-day-chart"></div>
 
