text edit on profile filter

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -33,7 +33,7 @@
 				<li class="button filter" id="culture">culture</li>
 				<li class="button filter" id="opinion">opinion</li>
 				<li class="button filter" id="other">other</li>
-				<li class="button active" id="all">show all</li>
+				<li class="button active" id="all">all</li>
 			</ul>
 			<div id="per-day-chart"></div>
 
